# gemini-live-trading-agent

./: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
deploy/: cleanup.sh  deploy.sh
docs/: architecture.md
public/: index.html
src/: config.py  main.py
src/agents/: live_trader.py
src/tools/: market_tools.py
